[project]
authors = [{name = "Hyunwoo Lee", email = "hyunwoolee488@gmail.com"}]
dependencies = []
name = "ocean-research"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ocean_research = { path = ".", editable = true }

[tool.pixi.tasks]
